--- a/src/Volvox.Helios.Web/Views/Poll/Index.cshtml
+++ b/src/Volvox.Helios.Web/Views/Poll/Index.cshtml
@@ -29,19 +29,27 @@
                 <ul class="list-group" id="Options">
                     <li class="list-group-item poll-item">
                         Not cool
-                        <div class="vote-count valign">5</div>
+                        <div class="vote-count valign">
+                            5 Votes
+                        </div>
                     </li>
                     <li class="list-group-item poll-item">
                         Its alright...:
-                        <div class="vote-count valign">44</div>
+                        <div class="vote-count valign">
+                            44 Votes
+                        </div>
                     </li>
                     <li class="list-group-item poll-item">
                         Pretty cool:
-                        <div class="vote-count valign">223</div>
+                        <div class="vote-count valign">
+                            223 Votes
+                        </div>
                     </li>
                     <li class="list-group-item poll-item">
                         Top notch:
-                        <div class="vote-count valign">304</div>
+                        <div class="vote-count valign">
+                            304 Votes
+                        </div>
                     </li>
                 </ul>
             </div>
