--- a/src/Volvox.Helios.Web/wwwroot/css/dark-theme.css
+++ b/src/Volvox.Helios.Web/wwwroot/css/dark-theme.css
@@ -11,6 +11,14 @@
   background: #3f3f3f;
 }
 
+hr{
+  border-color: var(--color-gray2);
+}
+
 .card {
   background-color: var(--color-deep-dark);
+}
+
+footer{
+  background: var(--color-deep-dark);
 }
