--- a/src/Volvox.Helios.Web/Views/Shared/_Layout.cshtml
+++ b/src/Volvox.Helios.Web/Views/Shared/_Layout.cshtml
@@ -17,7 +17,7 @@
     <meta name="theme-color" content="#5DCC32">
 
     <title>@ViewData["Title"] - Volvox.Helios</title>
-    <link href="~/css/loader.css" rel="stylesheet" />
+    <link href="~/css/loader.min.css" rel="stylesheet" />
     <environment include="Development">
         <link rel="stylesheet" href="~/vendor.min.css" />
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
